# skills-manage

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.factory/validation/collections/scrutiny/: synthesis.round1.json
.factory/validation/collections/scrutiny/reviews/: fix-add-to-collection-flow.json
.factory/validation/settings-polish/user-testing/: synthesis.json  synthesis.round1.json
.factory/validation/settings-polish/user-testing/flows/: settings-rerun.json
.factory/validation/skill-detail/scrutiny/: synthesis.round2.json
.factory/validation/skill-detail/user-testing/: synthesis.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: discover.rs  linker.rs  skills.rs
src/components/central/: CentralSkillCard.tsx  InstallDialog.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/marketplace/: GitHubRepoImportWizard.tsx  MarketplaceSkillDetailDrawer.tsx
src/components/platform/: SkillCard.tsx
src/components/skill/: SkillDetailDrawer.tsx
src/components/ui/: card.tsx
src/pages/: CentralSkillsView.tsx  CollectionView.tsx  MarketplaceView.tsx  PlatformView.tsx  SettingsView.tsx  SkillDetail.tsx
src/stores/: centralSkillsStore.ts  platformStore.ts
src/test/: App.test.tsx  AppShell.test.tsx  InstallDialog.test.tsx  MarketplaceView.test.tsx  PlatformView.test.tsx  SkillDetailDrawer.test.tsx  centralSkillsStore.test.ts  platformStore.test.ts  setup.ts
(+2 files in other folders)
